@@ -29,10 +29,6 @@ import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.io.WritableComparable;
 import org.apache.log4j.Logger;
 
-import com.facebook.hiveio.input.HiveApiInputFormat;
-import com.facebook.hiveio.input.HiveInputDescription;
-import com.facebook.hiveio.output.HiveApiOutputFormat;
-import com.facebook.hiveio.output.HiveOutputDescription;
 import com.facebook.hiveio.schema.HiveTableSchema;
 import com.facebook.hiveio.schema.HiveTableSchemas;
 import com.google.common.base.Splitter;
@@ -62,51 +58,6 @@ public class HiveUtils {
 
   /** Do not instantiate */
   private HiveUtils() {
-  }
-
-  /**
-   * Initialize hive input, prepare Configuration parameters
-   *
-   * @param hiveInputFormat HiveApiInputFormat
-   * @param inputDescription HiveInputDescription
-   * @param profileId profile ID
-   * @param conf Configuration
-   */
-  public static void initializeHiveInput(HiveApiInputFormat hiveInputFormat,
-      HiveInputDescription inputDescription, String profileId,
-      Configuration conf) {
-    try {
-      hiveInputFormat.setMyProfileId(profileId);
-      HiveApiInputFormat.setProfileInputDesc(conf, inputDescription, profileId);
-      HiveTableSchema schema = HiveTableSchemas.lookup(
-          conf, inputDescription.getTableDesc());
-      HiveTableSchemas.put(conf, profileId, schema);
-    } catch (IOException e) {
-      throw new IllegalStateException(
-          "initializeHiveInput: IOException occurred", e);
-    }
-  }
-
-  /**
-   * Initialize hive output, prepare Configuration parameters
-   *
-   * @param hiveOutputFormat HiveApiOutputFormat
-   * @param outputDesc HiveOutputDescription
-   * @param profileId Profile id
-   * @param conf Configuration
-   */
-  public static void initializeHiveOutput(HiveApiOutputFormat hiveOutputFormat,
-      HiveOutputDescription outputDesc, String profileId, Configuration conf) {
-    try {
-      hiveOutputFormat.setMyProfileId(profileId);
-      HiveApiOutputFormat.initProfile(conf, outputDesc, profileId);
-      HiveTableSchema schema = HiveTableSchemas.lookup(
-          conf, outputDesc.getTableDesc());
-      HiveTableSchemas.put(conf, profileId, schema);
-    } catch (IOException e) {
-      throw new IllegalStateException(
-          "initializeHiveOutput: IOException occurred", e);
-    }
   }
 
   /**
